keep unused slot fetches all owned items prices to prevent cancellation of viable, but undetected because of fetch limits, trades

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -230,16 +230,16 @@ services:
       SCHEDULING_FIXED_DELAY_USER_FETCH: 600000
       SCHEDULING_INITIAL_DELAY_USER_FETCH: 0
 
-      LOGGING_LEVEL: info
+      LOGGING_LEVEL: trace
 
       FAST_SELL_USER_ID: 1
       FAST_SELL_EMAIL: leskotr23@gmail.com
 
       FAST_SELL_MIN_MEDIAN_PRICE_DIFFERENCE: 300
       FAST_SELL_MIN_MEDIAN_PRICE_DIFFERENCE_PERCENTAGE: 100
-      FAST_SELL_OWNED_ITEMS_LIMIT: 250
+      FAST_SELL_OWNED_ITEMS_LIMIT: 500
       FAST_SELL_FETCH_USERS_ITEMS_OFFSET: 80
-      FAST_SELL_FETCH_USERS_ITEMS_LIMIT: 1000
+      FAST_SELL_FETCH_USERS_ITEMS_LIMIT: 1500
     networks:
       - postgres-net
       - redis-net
