--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -216,9 +216,9 @@ services:
       - auth_constants.env
     environment:
       SCHEDULING_ENABLED: true
-      SCHEDULING_FIXED_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_UPDATE: 350
+      SCHEDULING_FIXED_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_UPDATE: 325
       SCHEDULING_INITIAL_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_UPDATE: 10500
-      SCHEDULING_FIXED_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_FETCH: 75 # should be bigger or equal to 300/(Amount of provided fetching accounts)
+      SCHEDULING_FIXED_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_FETCH: 60 # should be bigger or equal to 300/(Amount of provided fetching accounts)
       # to avoid too many requests error
       SCHEDULING_INITIAL_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_FETCH: 12500
       SCHEDULING_FIXED_DELAY_ONE_USER_FAST_SELL_MANAGEMENT_EXECUTE: 5
@@ -230,16 +230,16 @@ services:
       SCHEDULING_FIXED_DELAY_USER_FETCH: 600000
       SCHEDULING_INITIAL_DELAY_USER_FETCH: 0
 
-      LOGGING_LEVEL: trace
+      LOGGING_LEVEL: info
 
       FAST_SELL_USER_ID: 1
       FAST_SELL_EMAIL: leskotr23@gmail.com
 
-      FAST_SELL_MIN_MEDIAN_PRICE_DIFFERENCE: 300
+      FAST_SELL_MIN_MEDIAN_PRICE_DIFFERENCE: 500
       FAST_SELL_MIN_MEDIAN_PRICE_DIFFERENCE_PERCENTAGE: 100
-      FAST_SELL_OWNED_ITEMS_LIMIT: 500
-      FAST_SELL_FETCH_USERS_ITEMS_OFFSET: 80
-      FAST_SELL_FETCH_USERS_ITEMS_LIMIT: 1500
+      FAST_SELL_OWNED_ITEMS_LIMIT: 300 # recommended to be <= 500, takes 360ms for 300
+      FAST_SELL_FETCH_USERS_ITEMS_OFFSET: 75
+      FAST_SELL_FETCH_USERS_ITEMS_LIMIT: 2000 # takes 300ms, 170 owned items for 1500, 390ms and 250 items for 2000
     networks:
       - postgres-net
       - redis-net
