fixed fast sell trade manager executing same command for few times

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -240,6 +240,7 @@ services:
       FAST_SELL_OWNED_ITEMS_LIMIT: 350 # recommended to be <= 500, takes 360ms for 300
       FAST_SELL_FETCH_USERS_ITEMS_OFFSET: 75
       FAST_SELL_FETCH_USERS_ITEMS_LIMIT: 2000 # takes 300ms, 170 owned items for 1500, 390ms and 250 items for 2000
+      FAST_SELL_SLEEP_AFTER_EXECUTION_TIME_MS: 0 # not needed for now
     networks:
       - postgres-net
       - redis-net
