--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -364,6 +364,7 @@ services:
     restart: unless-stopped
 
   redis-test:
+    profiles: ["manual"]
     container_name: r6helper-redis-test
     image: redis:7.2.4-bookworm
     ports:
@@ -376,7 +377,7 @@ services:
 
   kafka:
     container_name: r6helper-kafka
-    image: bitnami/kafka:3.9.0
+    image: bitnamilegacy/kafka:3.9.0
     ports:
       - "9092:9092"
     environment:
